# circe_graphics_engine

./: .gitignore  .gitmodules  BUILD_AND_DEBUG.md  CMakeLists.txt  README.md  build.sh  run.sh  structure.md
assets/shaders/: default.frag  default.vert  light.frag  ray_march.frag  ray_march.vert
engine/: CMakeLists.txt  Circe.h  pch.h
engine/Core/: Engine.cpp  Engine.h  Export.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Time.cpp  Time.h  Window.cpp  Window.h
engine/Core/Logging/: ErrorReporting.cpp
engine/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
engine/ImGui/: imGuiLayer.cpp  imGuiLayer.h
engine/Math/: Transform.h
engine/Renderer/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/Resources/: SimpleMeshGen.cpp  SimpleMeshGen.h
engine/Scene/: Behavior.h  CameraEntity.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
game/: CMakeLists.txt  example_black_hole.cpp  example_gravity_behavior.cpp  example_material_prieview.cpp  example_triangle.cpp  main.cpp
game/Behaviors/: CameraOrbitBehavior.cpp  CameraOrbitBehavior.h  GravityBehavior.cpp  GravityBehavior.h
